--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.5",
+    "@reduxjs/toolkit": "^2.2.7",
+    "cors": "^2.8.5",
+    "firebase": "^10.12.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "sweetalert2": "^11.12.3"
   },
