--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.25.1",
-    "sweetalert2": "^11.12.4"
+    "react-slick": "^0.30.2",
+    "sweetalert2": "^11.12.4",
+    "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
