--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^5.16.5",
+    "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^7.13.0",
     "@reduxjs/toolkit": "^2.2.7",
     "cors": "^2.8.5",
     "firebase": "^10.12.4",
