--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "sweetalert2": "^11.12.4",
     "swiper": "^11.1.9"
   },
